--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'Conduct of life -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Children -- Fiction'
+- GITenberg
 tableOfContents: 'Jennie Grig: the street-sweeper -- Nannie Bates: the huckster''s
   daughter -- Archibald Mackie: the little cripple.'
 title: The Elm Tree Tales
